# nk-uv-demo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README2.md  TODO.md  Taskfile.yml  naturkart-readme.md  pyproject.toml
.github/: CODEOWNERS  README_CICD-setup.md  dependabot.yaml
.github/workflows/: cd-publish-testpypi.yml  cd-python.yml  cd-upload-test-pypi.yml  ci-pre-commit.yml  ci-py-package.yml  ci-pytest.yml  ci-python.yml  ci-quality.yml  ci-safety-action.yml  ci-test-build-pypi.yml  ci-test-build.yml  cicd-codeql-analysis.yaml  cicd-zizmor.yml  codeql.yml  scan-codeql.yml  scan-safety.yml  scan-zizmor.yml
docs/: README.md  ci-cd.md  containerization.md  development.md  troubleshooting.md
docs/ci-cd/: deployment.md  workflows.md
docs/development/: README.md  code-quality.md  pre-commit.md  security.md  testing.md
docs/getting-started/: installation.md  quickstart.md  requirements.md
notebooks/: demo.ipynb
src/nk_uv_demo/: __init__.py
tests/: __init__.py  conftest.py
tests/nk_uv_demo/: __init__.py  test_main.py
