[project]
name = "nk-uv-demo"
version = "0.1.0"
description = "Demo package for Naturkart project"
readme = "README.md"
authors = [
    { name = "wilaca", email = "willeke.acampo@miljodir.no" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
nk-uv-demo = "nk_uv_demo:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5,<7",
]
